# MultimediaDataProcessing

./: CMakeLists.txt
Homework_1/: fileout.txt  main.c  sort_int_c++_v1.cpp  sort_int_c++_v2.cpp  sort_int_c++_v3.cpp  sort_int_c++_v4.cpp
Homework_2/Exercise_1/: Exercise_1.cpp  Lab_version_1.cpp  Lab_version_2.cpp  input file  output file
Homework_2/Exercise_2/: Lab_version_2.cpp
Homework_2/Exercise_3/: Lab_version_3.cpp
Homework_2/Exercise_4/: Lab_version_4.cpp
Homework_2/Exercise_5/: Lab_version_5.cpp
Homework_3/Exercise_1/: Exercise_1.cpp  Lab_version_1.cpp  out01.txt
Homework_4/Exercise_1/: Exercise_1.cpp  Exercise_1_v0.cpp  Exercise_1_v1.cpp  Exercise_1_v2.cpp  compressme3.packbits  output.packbits
Homework_4/Exercise_2/: Exercise_2.cpp  output.packbits  packbits_extension.cpp
Homework_4/Exercise_3/: Lab_version_v1.cpp  huffman1.cpp
Homework_4/Exercise_4/: huffman2.cpp
