cmake_minimum_required(VERSION 3.30)
project(Lab)

set(CMAKE_CXX_STANDARD 26)

add_executable(Lab main.cpp
        Homework_2/Exercise_1/Exercise_1.cpp
        Homework_2/Exercise_1/Lab_version_1.cpp
        Homework_2/Exercise_2/Lab_version_2.cpp
        Homework_2/Exercise_3/Lab_version_3.cpp
        Homework_2/Exercise_4/Lab_version_4.cpp
        Homework_2/Exercise_5/Lab_version_5.cpp
        Homework_2/Exercise_1/Lab_version_2.cpp
        Homework_3/Exercise_1/Exercise_1.cpp
        Homework_3/Exercise_1/Lab_version_1.cpp
        Homework_4/Exercise_1/Exercise_1.cpp
        Homework_4/Exercise_1/Exercise_1_v2.cpp
        Homework_4/Exercise_1/Exercise_1_v1.cpp
        Homework_4/Exercise_1/Exercise_1_v0.cpp
        Homework_4/Exercise_2/Exercise_2.cpp
        Homework_4/Exercise_2/packbits_extension.cpp
        Homework_4/Exercise_3/huffman1.cpp
        Homework_4/Exercise_4/huffman2.cpp
        Homework_4/Exercise_3/Lab_version_v1.cpp)
